--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI # name of the test
+name: CI 
 
 on:
   push:
@@ -7,15 +7,15 @@ on:
   pull_request:
     # run on all PRs
 
-jobs: # the things being executed
-  tests: # the name of your status check, will become important when you do branch protection
-    runs-on: ubuntu-latest # which device on Github's server that you are running the Actions on
+jobs: 
+  tests: 
+    runs-on: ubuntu-latest 
     steps:
-      - uses: actions/checkout@v4 # using version 4 of Actions
+      - uses: actions/checkout@v4 
       - name: Install Dependencies
         run: npm install
       - name: Unit Test
-        run: npm run test # run all tests
+        run: npm run test  
   lint:
     runs-on: ubuntu-latest
     steps:
@@ -37,3 +37,13 @@ jobs: # the things being executed
             format: gnu        
             css: true  
             blacklist: "node_modules" 
+
+  codacy-analysis-cli:
+    name: Codacy Analysis CLI
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@main
+
+      - name: Run Codacy Analysis CLI
+        uses: codacy/codacy-analysis-cli-action@master
