--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,41 +42,28 @@ jobs:
       - name: JSDoc Action
         uses: andstor/jsdoc-action@v1.2.1
 
-  monitor-project-quality:
-    name: Run the quality monitor
-    runs-on: ubuntu-latest
+  # monitor-project-quality:
+  #   name: Run the quality monitor
+  #   runs-on: ubuntu-latest
 
-    permissions:        
-      contents: read
-      pull-requests: write  
+  #   permissions:        
+  #     contents: read
+  #     pull-requests: write  
 
-    steps:
-      - uses: actions/checkout@v4
+  #   steps:
+  #     - uses: actions/checkout@v4
 
-      - name: Set up JDK 21
-        uses: actions/setup-java@v3
-        with:
-          distribution: temurin
-          java-version: 21
-          check-latest: true
-          cache: maven
+  #     - name: Build (compile, test, mutation coverage, static analysis)
+  #       run: mvn -ntp clean verify -Ppit
 
-      - name: Set up Maven
-        uses: stCarolas/setup-maven@v5
-        with:
-          maven-version: 3.9.6
+  #     - name: Find current pull-request number
+  #       id: pr
+  #       uses: jwalton/gh-find-current-pr@v1
+  #       with:
+  #         github-token: ${{ secrets.GITHUB_TOKEN }}   # ← add token here too (optional but recommended)
 
-      - name: Build (compile, test, mutation coverage, static analysis)
-        run: mvn -ntp clean verify -Ppit
-
-      - name: Find current pull-request number
-        id: pr
-        uses: jwalton/gh-find-current-pr@v1
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}   # ← add token here too (optional but recommended)
-
-      - name: Run Quality Monitor
-        uses: uhafner/quality-monitor@v1
-        with:
-          pr-number:    ${{ steps.pr.outputs.number }}
-          github-token: ${{ secrets.GITHUB_TOKEN }}   # ← required
+  #     - name: Run Quality Monitor
+  #       uses: uhafner/quality-monitor@v1
+  #       with:
+  #         pr-number:    ${{ steps.pr.outputs.number }}
+  #         github-token: ${{ secrets.GITHUB_TOKEN }}   # ← required
