--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "devDependencies": {
     "@eslint/css": "^0.7.0",
     "@eslint/js": "^9.26.0",
@@ -7,11 +8,6 @@
     "jest": "^29.7.0"
   },
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
-  },
-  "type": "module",
-  "jest": {
-    "transform": {},
-    "verbose": true
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage"
   }
 }
