--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,4 +36,4 @@ jobs: # the things being executed
             root: .               
             format: gnu        
             css: true  
-            blacklist: "node_modules" 
+            blacklist: "node_modules coverage" 
