--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
   validate-html:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v4 
       - name: Validate markup with Nu HTML Checker
         uses: Cyb3r-Jak3/html5validator-action@v7.2.0   
         with:
@@ -41,6 +41,11 @@ jobs:
       - uses: actions/checkout@v4
       - name: JSDoc Action
         uses: andstor/jsdoc-action@v1.2.1
+        with:
+          source_dir: ./
+          recurse: true
+          output_dir: ./docs
+
 
   # monitor-project-quality:
   #   name: Run the quality monitor
