--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "@eslint/js": "^9.26.0",
     "eslint": "^9.26.0",
     "globals": "^16.1.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jsdoc": "^4.0.4"
   },
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
