--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI # name of the test
+name: CI 
 
 on:
   push:
@@ -7,15 +7,36 @@ on:
   pull_request:
     # run on all PRs
 
-jobs: # the things being executed
-  tests: # the name of your status check, will become important when you do branch protection
-    runs-on: ubuntu-latest # which device on Github's server that you are running the Actions on
+jobs: 
+  tests: 
+    runs-on: ubuntu-latest 
+    permissions:          # added: token so Quality Monitor can comment
+      contents: read
+      pull-requests: write
     steps:
-      - uses: actions/checkout@v4 # using version 4 of Actions
-      - name: Install Dependencies
-        run: npm install
-      - name: Unit Test
-        run: npm run test # run all tests
+      - uses: actions/checkout@v4
+      - name: Install dependencies
+        run: npm ci
+      - name: Unit Test with coverage      # changed: enable coverage output
+        run: npm test -- --coverage
+      - name: Convert LCOV → Cobertura
+        run: |           
+          npx lcov-to-cobertura-xml \
+            -i coverage/lcov.info \
+            -o coverage/cobertura-coverage.xml
+      - name: Find pull-request number   
+        if: github.event_name == 'pull_request'
+        id: pr
+        uses: jwalton/gh-find-current-pr@v1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Quality Monitor summary      # added: aggregate & comment
+        if: github.event_name == 'pull_request'
+        uses: uhafner/quality-monitor@v1
+        with:
+          pr-number:    ${{ steps.pr.outputs.number }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+    
   lint:
     runs-on: ubuntu-latest
     steps:
@@ -24,16 +45,24 @@ jobs: # the things being executed
       run: npm install
     - name: Run ESLint
       run: npx eslint ./
-
   validate-html:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v4
-  
-        - name: Validate markup with Nu HTML Checker
-          uses: Cyb3r-Jak3/html5validator-action@v7.2.0   
-          with:
-            root: .               
-            format: gnu        
-            css: true  
-            blacklist: "node_modules" 
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4 
+      - name: Validate markup with Nu HTML Checker
+        uses: Cyb3r-Jak3/html5validator-action@v7.2.0   
+        with:
+          root: .               
+          format: gnu        
+          css: true  
+          blacklist: "node_modules"
+  jsdoc:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: JSDoc Action
+        uses: andstor/jsdoc-action@v1.2.1
+        with:
+          source_dir: ./
+          recurse: true
+          output_dir: ./docs
