fix main.yml for jsdoc

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,6 +62,6 @@ jobs:
       - name: JSDoc Action
         uses: andstor/jsdoc-action@v1.2.1
         with:
-          source_dir: ./
+          source_dir: ./js
           recurse: true
-          output_dir: ./docs
+          output_dir: ./docs/jsdoc
