ignore jsdoc for linting

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
     - name: Install modules
       run: npm install
     - name: Run ESLint
-      run: npx eslint ./
+      run: npx eslint ./ --ignore-pattern docs/jsdoc
   validate-html:
     runs-on: ubuntu-latest
     steps:
