--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
     # run on all PRs
 
-jobs:
+jobs: 
   tests: 
     runs-on: ubuntu-latest 
     permissions:          # added: token so Quality Monitor can comment
@@ -17,24 +17,39 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install dependencies
         run: npm ci
-      - name: Unit Test with coverage      # changed: enable coverage output
-        run: npm test -- --coverage
-      - name: Convert LCOV → Cobertura     
-        run: npx lcov-to-cobertura-xml \ 
-             -i coverage/lcov.info \
-             -o coverage/cobertura-coverage.xml
+      - name: Unit Test with coverage
+        run: |
+          npm test -- --coverage \
+            --coverageReporters=lcov \
+            --coverageReporters=cobertura 
       - name: Find pull-request number   
         if: github.event_name == 'pull_request'
         id: pr
         uses: jwalton/gh-find-current-pr@v1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Quality Monitor summary      # added: aggregate & comment
+      - name: Quality Monitor summary
         if: github.event_name == 'pull_request'
         uses: uhafner/quality-monitor@v1
         with:
           pr-number:    ${{ steps.pr.outputs.number }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          config: |                        # <-- NEW
+            {
+              "coverage": [
+                {
+                  "name": "Cobertura",
+                  "tools": [
+                    {
+                      "id": "cobertura",
+                      "name": "Line Coverage",
+                      "metric": "line",
+                      "pattern": "**/coverage/cobertura-coverage.xml"
+                    }
+                  ]
+                }
+              ]
+            }
     
   lint:
     runs-on: ubuntu-latest
@@ -55,4 +70,4 @@ jobs:
           root: .               
           format: gnu        
           css: true  
-          blacklist: "node_modules,docs/jsdoc"
+          blacklist: "docs/jsdoc"
