--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,48 +8,14 @@ on:
     # run on all PRs
 
 jobs: 
-  tests: 
-    runs-on: ubuntu-latest 
-    permissions:          # added: token so Quality Monitor can comment
-      contents: read
-      pull-requests: write
+  tests:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Install dependencies
-        run: npm ci
-      - name: Unit Test with coverage
-        run: |
-          npm test -- --coverage \
-            --coverageReporters=lcov \
-            --coverageReporters=cobertura 
-      - name: Find pull-request number   
-        if: github.event_name == 'pull_request'
-        id: pr
-        uses: jwalton/gh-find-current-pr@v1
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Quality Monitor summary
-        if: github.event_name == 'pull_request'
-        uses: uhafner/quality-monitor@v1
-        with:
-          pr-number:    ${{ steps.pr.outputs.number }}
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          config: |                        # <-- NEW
-            {
-              "coverage": [
-                {
-                  "name": "Cobertura",
-                  "tools": [
-                    {
-                      "id": "cobertura",
-                      "name": "Line Coverage",
-                      "metric": "line",
-                      "pattern": "**/coverage/cobertura-coverage.xml"
-                    }
-                  ]
-                }
-              ]
-            }
+      - name: Install Dependencies
+        run: npm install
+      - name: Unit Test
+        run: npm run test
     
   lint:
     runs-on: ubuntu-latest
