--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,10 +1,14 @@
-# .github/workflows/coverage.yml
 name: Code Coverage
 
+# grant Actions permission to write PR comments
+permissions:
+  contents: read
+  pull-requests: write
+
 on:
-  push:
-    branches: [main]
   pull_request:
+    branches: [main]
+  push:
     branches: [main]
 
 jobs:
@@ -28,8 +32,9 @@ jobs:
       - name: 📊 Generate Coverage Report
         uses: davelosert/vitest-coverage-report-action@v2
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}          # required
-          json-summary-path: coverage/coverage-summary.json  # Jest’s summary JSON
-          json-final-path:   coverage/coverage-final.json    # full coverage JSON
-          comment-on:       pr                               # post to the PR
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          vite-config-path: ''                       # prevents the Vite config warning
+          json-summary-path: coverage/coverage-summary.json
+          json-final-path:   coverage/coverage-final.json
+          comment-on:       pr
 
