--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
           root: .               
           format: gnu        
           css: true  
-          blacklist: "coverage docs" 
+          blacklist: docs 
 
   jsdoc:
     runs-on: ubuntu-latest
