--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           vite-config-path: ''                       # prevents the Vite config warning
-          json-summary-path: coverage/coverage-summary.json
-          json-final-path:   coverage/coverage-final.json
+          json-summary-path: docs/coverage/coverage-summary.json
+          json-final-path:   docs/coverage/coverage-final.json
           comment-on:       pr
 
