--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,19 +24,20 @@ jobs:
     - name: Install modules
       run: npm install
     - name: Run ESLint
-      run: npx eslint ./ --ignore-pattern docs/jsdoc
+      run: npx eslint ./ --ignore-pattern docs/
 
   validate-html:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4 
+      - uses: actions/checkout@v4
+
       - name: Validate markup with Nu HTML Checker
         uses: Cyb3r-Jak3/html5validator-action@v7.2.0   
         with:
           root: .               
           format: gnu        
           css: true  
-          blacklist: docs
+          blacklist: docs 
 
   jsdoc:
     runs-on: ubuntu-latest
