--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
+  "type": "module",
   "devDependencies": {
     "@eslint/css": "^0.7.0",
     "@eslint/js": "^9.26.0",
     "eslint": "^9.26.0",
     "globals": "^16.1.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0"
   },
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
-  },
-  "type": "module",
-  "jest": {
-    "transform": {},
-    "verbose": true
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage"
   }
 }
