--- a/.github/workflows/jsdoc.yml
+++ b/.github/workflows/jsdoc.yml
@@ -3,7 +3,7 @@ name: JSDoc Generation
 on:
   push:
     branches:
-      - main # only run on direct pushes to main
+      - main
 
 jobs:  
   jsdoc:
@@ -28,8 +28,20 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
+          git checkout -b jsdoc/generate-docs
+
           git add docs/jsdoc
           git commit -m "Update JSDoc documentation" || echo "No changes"
 
-          BRANCH_NAME="${{ github.head_ref || github.ref_name }}"
-          git push origin HEAD:$BRANCH_NAME
+          git push --force --set-upstream origin jsdoc/generate-docs
+
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v6
+        with:
+          branch: jsdoc/generate-docs
+          title: "Update JSDoc Documentation"
+          body: |
+            This pull request updates the generated JSDoc documentation.
+            It was automatically created by a GitHub Action.
+          base: main
+
