--- a/.github/workflows/jsdoc.yml
+++ b/.github/workflows/jsdoc.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:  
   jsdoc:
-    if: github.actor != 'github-actions[bot]'
+    if: "!contains(github.event.head_commit.author.name, 'github-actions')"
     runs-on: ubuntu-latest
     permissions:
       contents: write
