--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,11 @@ jobs:
       run: npm install
     - name: Run ESLint
       run: npx eslint ./ --ignore-pattern docs/
+    - name: Upload reports
+      uses: actions/upload-artifact@v4
+      with:
+        name: reports
+        path: eslint.sarif
 
   validate-html:
     runs-on: ubuntu-latest
@@ -35,9 +40,17 @@ jobs:
         uses: Cyb3r-Jak3/html5validator-action@v7.2.0   
         with:
           root: .               
-          format: gnu        
+          format: json                # machine-readable
           css: true  
           blacklist: docs 
+          extra: --log-file html5.json
+
+      - name: Upload reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: reports
+          path: html5.json
+          if-no-files-found: warn
 
   jsdoc:
     runs-on: ubuntu-latest
@@ -52,3 +65,43 @@ jobs:
 
       - name: Run JSDoc
         run: npx jsdoc ./js -r -d ./docs/jsdoc
+
+  quality-monitor:
+    runs-on: ubuntu-latest
+    needs: [tests, lint, validate-html]
+    if: github.event_name == 'pull_request'
+    permissions:
+      contents: read
+      pull-requests: write
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          name: reports
+          path: ./reports
+      - name: Quality Monitor summary
+        uses: uhafner/quality-monitor@v1
+        with:
+          pr-number:    ${{ github.event.pull_request.number }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          config: |
+            {
+              "tests": { "tools": [
+                { "id": "test", "pattern": "**/junit.xml" }
+              ]},
+              "analysis": [
+                { "name": "Style", "tools": [
+                  { "id": "sarif", "pattern": "**/*.sarif" }
+                ]},
+                { "name": "HTML",  "tools": [
+                  { "id": "html",  "pattern": "**/html5.json" }
+                ]}
+              ],
+              "coverage": [
+                { "name": "Line Coverage",
+                  "metric": "line",
+                  "tools": [
+                    { "id": "cobertura",
+                      "pattern": "**/coverage/cobertura-coverage.xml" }
+                  ]}
+              ]
+            }
