--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "devDependencies": {
     "@eslint/css": "^0.7.0",
     "@eslint/js": "^9.26.0",
+    "@microsoft/eslint-formatter-sarif": "^3.1.0",
     "eslint": "^9.28.0",
     "globals": "^16.1.0",
     "jest": "^29.7.0",
