--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,9 +35,7 @@ jobs:
     - name: Install modules
       run: npm install
     - name: Run ESLint
-      run: npx eslint . --ignore-pattern docs/ \
-        -f @microsoft/eslint-formatter-sarif \
-        -o eslint.sarif
+      run: npx eslint . --ignore-pattern docs/ -f @microsoft/eslint-formatter-sarif -o eslint.sarif
     - name: Upload reports
       uses: actions/upload-artifact@v4
       with:
