try another file path search

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -107,7 +107,7 @@ jobs:
                   "tools": [
                     { "id": "cobertura",
                       "metric": "LINE",
-                      "pattern": "**/coverage/cobertura-coverage.xml" }
+                      "pattern": "**/cobertura-coverage.xml" }
                   ]}
               ]
             }
